<resources>
    <string name="app_name">BrainDeck</string>

    <!--   todos son identificadores MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--    ACTIVIDAD DE REGISTRO-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">nombre</string>
    <string name="CorreoEt">Correo electrónico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>


    <!--    ACTIVIDAD LOGIN-->
    <string name="IniciarSesionTXT">Iniciar Sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">eyy, si no tienes una cuenta crea una presionando aquí;3</string>

    <!--    menu principal-->
    <string name="BienvenidoPrincipal">Bienvenido (a) ^-^</string>
    <string name="UidPrincipal">--</string>
    <string name="NombresPrincipal">--</string>
    <string name="CorreoPrincipal">--</string>
    <string name="CrearMazo">Crear Mazo</string>
    <string name="VerMazo">Ver Mazo</string>
    <string name="ModoJuego">Entrar a modo de juego</string>
    <string name="Puntajes">Puntajes ^-^</string>
    <string name="EditarMazo">Editar Mazo</string>
    <string name="CerrarSesion">Salir</string>

</resources>