<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">
<!--        Icono en menu de inicio-->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/icono_aplicacion"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
<!--        titulo-->
        <TextView
            android:text="@string/app_name"
            android:textSize="35sp"
            android:fontFamily="@font/josefinsans"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
<!--        boton de login-->
        <Button
            android:fontFamily="@font/josefinsanscuerpo"
            android:id="@+id/Btn_Login"
            android:text="@string/Btn_Login"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
<!--        boton de registro-->
        <Button
            android:fontFamily="@font/josefinsanscuerpo"
            android:id="@+id/Btn_Registro"
            android:text="@string/Btn_Registro"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>